33. Update User class fix typo mistake.
34. Update Signup,Signin class fix issue send verification email either not set to true.
35. Update Component Router class code optimization.
36. Update Component Controller class code optimization (reuse of controller class). 	
37. Update Validation Handler class allow users to translate the defaults msgs of validations.
38. Update FileHandling class fix logical mistake.
39. Added two functions in helper.php (read and write file).
40. Added pagination class and pagination function.
41. Update Pagination class fix logical mistake.
42. Fix typo in language string class Local to Locale.
43. Fix typo mistake in Files class.
44. Update FTP class fix typo.
45. Update Conversion class Code Optimization delete unnecessary code.
46. Update files class, implement folder creation recursively (special thanks => https://github.com/NivaldoMS).
47. Added shell script file for starting php server , php version and Zest framework version.
48. Added callback in Router for creating protected page according to specific certia
   - know issue: its will not work if cache is enable.
49. Fix sessionUnset() method to delete all sessions.
50. Update Cryptography class
51. Update Cryptography system.
52. Update systemMessage class fix serveral issues.
53. Update Session class fix session not deleting issue.
54. Update Pagination Ssystem 
    - Allow developers to add custum class to ul,li and a tag.
55. Update Language Class.
56. Update Root class fix typos.
57. Delete Language Class form Component 
	- Now you can use printl function in component as well
58. Update PasswordManipulation class
    - Added method for set custum password length
59. Added HTTP Request library more will added soon.
60. Update Router class using http\Request.
61. Add HTTP Redirect class.
62. Add HTTP Response class.
63. Update HTTP Response class.
64. Added HTTP Message class.
65. Added HTTP Headers classs.
66. Added HTTP URI class.